# vibrogen

./: CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h  models.h  projectserializer.cpp  projectserializer.h  scenariodialog.cpp  scenariodialog.h  signaldialog.cpp  signaldialog.h  signalengine.cpp  signalengine.h  signalplotwidgets.cpp  signalplotwidgets.h  trainconfigdialog.cpp  trainconfigdialog.h
